Fix for correct image height display on mobile devices

--- a/css/happy.css
+++ b/css/happy.css
@@ -26,6 +26,7 @@ a:focus {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 /* --------------------------------------------------------
